--- a/css/style.css
+++ b/css/style.css
@@ -70,6 +70,24 @@ body{
     position: absolute;
     top: 0;
     left: 0;
+    animation-name: slideChanging;
+    animation-duration: .5s;
+    animation-fill-mode: forwards;
+    transition: all .5s linear;
+    -webkit-transition: all .5s linear;
+    -moz-transition: all .5s linear;
+    -ms-transition: all .5s linear;
+    -o-transition: all .5s linear;
+}
+
+@keyframes slideChanging {
+    from{
+        opacity: 0;
+    }
+
+    to{
+        opacity: 1;
+    }
 }
 
 .slider__arrows-block{
